--- a/css/style.css
+++ b/css/style.css
@@ -2949,8 +2949,7 @@ figure.effect-apollo:hover p {
     }
 
     .agileinfo-social-grids {
-        float: left;
-        margin-left: 2em;
+        float: right;
     }
 
     .agileits-banner-info h2 {
