--- a/css/style.css
+++ b/css/style.css
@@ -3037,6 +3037,10 @@ figure.effect-apollo:hover p {
         margin-right: 0;
         margin-bottom: 10px;
     }
+    
+  .article {
+        margin-top: 150px;
+    }
 
 }
 
