--- a/css/style.css
+++ b/css/style.css
@@ -1730,6 +1730,7 @@ h2.typoh2 {
     border-radius: 10px;
     overflow: hidden;
     text-align: center;
+    margin-bottom: 20px;
 }
 
 .card-title {
