--- a/css/style.css
+++ b/css/style.css
@@ -1746,7 +1746,7 @@ h2.typoh2 {
 .card .image-container img {
     width: 400px;
     height: 250px;
-    object-fit: cover;
+    object-fit: contain;
     object-position: center;
 }
 
