--- a/css/style.css
+++ b/css/style.css
@@ -271,6 +271,21 @@ ul.dropdown-menu {
     border-radius: 6px 0 6px 6px;
 }
 
+.interndetail-container h4{
+    font-size: 18px;
+    color: #8DAE84;
+    font-weight: bolder;
+}
+
+.dash-list {
+    list-style: none;
+    padding-left: 20px;
+}
+.dash-list li:before {
+    content: "- ";
+    margin-left: -20px;
+}
+
 /*-- //top-nav --*/
 /*-- social-icons --*/
 .agileinfo-social-grids {
