--- a/css/style.css
+++ b/css/style.css
@@ -1197,6 +1197,10 @@ ul.w3agile_footer_grid_list i.fa.fa-twitter {
     margin-bottom: 220px;
 }
 
+.card-content4 {
+    margin-bottom: 110px;
+}
+
 .ih-item.circle {
     position: relative;
     width: 220px;
